--- a/.ssh/config
+++ b/.ssh/config
@@ -1,8 +1,12 @@
-# 깃헙계정
-# ---------------
-Host github.com
- HostName github.com-luna
+# githb
+# ----------------------------
+Host github.com-toinfinityNbeyond
+ HostName github.com
+ IdentityFile ~/.ssh/id_rsa
+ User toinfinityNbeyond
+
+# ----------------------------
+Host github.com-luna
+ HostName github.com
  IdentityFile ~/.ssh/id_rsa_luna
  User include-minji
-
-
